--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.backgroundCont{
+/* .backgroundCont{
   position: absolute;
   left: -4.5vw;
   top: -1vh;
@@ -7,6 +7,15 @@
   overflow-y: hidden;
   overflow-x: hidden;
 
+} */
+.backgroundCont {
+  width: 100%;
+  height: 100%;
+}
+
+.appContainer {
+ height: 100vh;
+ width: 100vw;
 }
 body {
   overflow: hidden;
